--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-▓СР АСДСР ЯЯШКЙХ МЮ БЯЕ УНААХ
+<html>
+<style>
+.logo{
+	height:300px;
+	width:300px;
+	border:solid 1px #ccc;
+	border-radius:300px;
+}
+a{
+	text-decoration:none;
+	font-weight:bold;
+	font-size:20;
+	color:blue;
+}
+</style>
+<head><title>Хобби групп 14201, 14202</title></head>
+<body background="saltuk/images/fon.jpg">
+<div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 20 0">
+<table width=100%>
+<tr>
+<td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.png"></a><br><br>
+<a href="saltuk/hobby.php">Константин салтук</a></td>
+<td align="center"><a href="#"><img class=logo src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg"></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+</tr>
+<tr>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+</tr>
+<tr>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+</tr>
+<tr>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+</tr>
+<tr>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Зарезервированное место</a></td>
+</tr>
+</table>
+</div>
+<div style="height: 50px"></div>
+</body>
+</html>
