--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@ a{
 	font-size:20;
 	color:blue;
 }
+td{
+	padding-bottom:20px;
+}
 </style>
 <head><title>Хобби групп 14201, 14202</title></head>
 <body background="saltuk/images/fon.jpg">
-<div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 20 0">
+<div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 0 0">
 <table width=100%>
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.png"></a><br><br>
