--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ td{
 <table width=100%>
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
-<a href="saltuk/hobby.php">Константин салтук</a></td>
-<td align="center"><a href="#"><img class=logo src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg"></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="saltuk/hobby.php">Константин Салтук</a></td>
+<td align="center"><a href="mahina/hobby.php"><img class=logo src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg"></a><br><br>
+<a href="mahina/hobby.php">Махина Екатерина</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
 <a href="#">Зарезервированное место</a></td>
 </tr>
