--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@ td{
 	padding-bottom:20px;
 }
 </style>
-<head><title>Хобби групп 14201, 14202</title></head>
+<head><title>О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫ 14201, 14202</title></head>
 <body background="fon.jpg">
 <div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 0 0">
 <table width=100%>
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
-<a href="saltuk/hobby.php">Константин Салтук</a></td>
+<a href="saltuk/hobby.php">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="mahina/hobby.php"><img class=logo src="logos/mahina.jpg"></a><br><br>
-<a href="mahina/hobby.php">Махина Екатерина</a></td>
+<a href="mahina/hobby.php">О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="klokov/hobby.php"><img class=logo src="logos/klokov.jpg"></a><br><br>
-<a href="klokov/hobby.php">Клоков Денис</a></td>
+<a href="klokov/hobby.php">О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
+</tr>
+<tr>
+<td align="center"><a href="boldakov/Hobby.php"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
+<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
-</tr>
-<tr>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫</a></td>
 </tr>
 </table>
 </div>
