--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ td{
 <a href="klokov/hobby.php">Клоков Денис</a></td>
 </tr>
 <tr>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
 <a href="#">Зарезервированное место</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
 <a href="#">Зарезервированное место</a></td>
