--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ td{
 }
 </style>
 <head><title>Хобби групп 14201, 14202</title></head>
-<body background="saltuk/images/fon.jpg">
+<body background="fon.jpg">
 <div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 0 0">
 <table width=100%>
 <tr>
