--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ td{
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
 <a href="saltuk/hobby.php">Константин Салтук</a></td>
-<td align="center"><a href="mahina/hobby.php"><img class=logo src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg"></a><br><br>
+<td align="center"><a href="mahina/hobby.php"><img class=logo src="logos/mahina.jpg"></a><br><br>
 <a href="mahina/hobby.php">Махина Екатерина</a></td>
 <td align="center"><a href="klokov/hobby.php"><img class=logo src="logos/klokov.jpg"></a><br><br>
 <a href="klokov/hobby.php">Клоков Денис</a></td>
