Ещё блять и кавычка

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ td{
 <tr>
 <td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
 <a href="#">Болдаков Валерий</a></td>
-<td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png></a><br><br>
+<td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png"></a><br><br>
 <a href="shashok/hobby.php">Шашок Наташа</a></td>
 <td align="center"><a href="samarin/hobby.php"><img class=logo src=https://pp.vk.me/c320725/v320725982/a952/EAxoZy8okbo.jpg></a><br><br>
 <a href="#">Самарин Ромочка</a></td>
