--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ td{
 <a href="#">Болдаков Валерий</a></td>
 <td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png></a><br><br>
 <a href="shashok/hobby.php">Shashok Natalia</a></td>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="loginovsky/hobby.php"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
+<a href="#">Логиновский Степан</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
