--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ td{
 <tr>
 <td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
 <a href="#">Болдаков Валерий</a></td>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png"></a><br><br>
+<a href="shashok/hobby.php">Шашок Наташа</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
 <a href="#">Зарезервированное место</a></td>
 </tr>
