--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ td{
 <tr>
 <td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
 <a href="#">Болдаков Валерий</a></td>
-<td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png></a><br><br>
+<td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png"></a><br><br>
 <a href="shashok/hobby.php">Shashok Natalia</a></td>
-<td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<td align="center"><a href="yan/hobby.php"><img class=logo src="logos/yan.jpg"></a><br><br>
+<a href="yan/hobby.php">Ян Игорь</a></td>
 </tr>
 <tr>
 <td align="center"><a href="loginovsky/hobby.php"><img class=logo src="logos/loginovsky"></a><br><br>
