--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ td{
 <tr>
 <td align="center"><a href="loginovsky/hobby.php"><img class=logo src="logos/loginovsky"></a><br><br>
 <a href="#">Логиновский Степан</a></td>
-<td align="center"><a href="yan/hobby.php"><img class=logo src="logos/yan.jpg"></a><br><br>
-<a href="yan/hobby.php">Ян Игорь</a></td>
+<td align="center"><a href="samarin/hobby.php"><img class=logo src=https://pp.vk.me/c320725/v320725982/a952/EAxoZy8okbo.jpg></a><br><br>
+<a href="#">Самарин Ромочка</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
 <a href="#">Зарезервированное место</a></td>
 </tr>
