--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ td{
 <table width=100%>
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
-<a href="saltuk/hobby.php">Константин Салтук</a></td>
+<a href="saltuk/hobby.php">Салтук Константин</a></td>
 <td align="center"><a href="mahina/hobby.php"><img class=logo src="logos/mahina.jpg"></a><br><br>
 <a href="mahina/hobby.php">Махина Екатерина</a></td>
 <td align="center"><a href="klokov/hobby.php"><img class=logo src="logos/klokov.jpg"></a><br><br>
@@ -32,7 +32,7 @@ td{
 <td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
 <a href="#">Болдаков Валерий</a></td>
 <td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png"></a><br><br>
-<a href="shashok/hobby.php">Shashok Natalia</a></td>
+<a href="shashok/hobby.php">Шашок Наталья</a></td>
 <td align="center"><a href="yan/hobby.php"><img class=logo src="logos/yan.jpg"></a><br><br>
 <a href="yan/hobby.php">Ян Игорь</a></td>
 </tr>
