--- a/index.html
+++ b/index.html
@@ -16,49 +16,49 @@ td{
 	padding-bottom:20px;
 }
 </style>
-<head><title>Хобби групп 14201, 14202</title></head>
+<head><title>п╔п╬п╠п╠п╦ пЁя─я┐п©п© 14201, 14202</title></head>
 <body background="fon.jpg">
 <div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 0 0">
 <table width=100%>
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
-<a href="saltuk/hobby.php">Салтук Константин</a></td>
+<a href="saltuk/hobby.php">п║п╟п╩я┌я┐п╨ п п╬п╫я│я┌п╟п╫я┌п╦п╫</a></td>
 <td align="center"><a href="mahina/hobby.php"><img class=logo src="logos/mahina.jpg"></a><br><br>
-<a href="mahina/hobby.php">Махина Екатерина</a></td>
+<a href="mahina/hobby.php">п°п╟я┘п╦п╫п╟ п∙п╨п╟я┌п╣я─п╦п╫п╟</a></td>
 <td align="center"><a href="klokov/hobby.php"><img class=logo src="logos/klokov.jpg"></a><br><br>
-<a href="klokov/hobby.php">Клоков Денис</a></td>
+<a href="klokov/hobby.php">п п╩п╬п╨п╬п╡ п■п╣п╫п╦я│</a></td>
 </tr>
 <tr>
 <td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
-<a href="#">Болдаков Валерий</a></td>
+<a href="#">п▒п╬п╩п╢п╟п╨п╬п╡ п▓п╟п╩п╣я─п╦п╧</a></td>
 <td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png"></a><br><br>
-<a href="shashok/hobby.php">Шашок Наталья</a></td>
+<a href="shashok/hobby.php">п╗п╟я┬п╬п╨ п²п╟я┌п╟п╩я▄я▐</a></td>
 <td align="center"><a href="yan/hobby.php"><img class=logo src="logos/yan.jpg"></a><br><br>
-<a href="yan/hobby.php">Ян Игорь</a></td>
+<a href="yan/hobby.php">п╞п╫ п≤пЁп╬я─я▄</a></td>
 </tr>
 <tr>
 <td align="center"><a href="loginovsky/hobby.php"><img class=logo src="logos/loginovsky"></a><br><br>
-<a href="#">Логиновский Степан</a></td>
+<a href="#">п⌡п╬пЁп╦п╫п╬п╡я│п╨п╦п╧ п║я┌п╣п©п╟п╫</a></td>
 <td align="center"><a href="samarin/hobby.php"><img class=logo src=https://pp.vk.me/c320725/v320725982/a952/EAxoZy8okbo.jpg></a><br><br>
-<a href="#">Самарин Ромочка</a></td>
+<a href="#">п║п╟п╪п╟я─п╦п╫ п═п╬п╪п╬я┤п╨п╟</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
-<a href="#">Зарезервированное место</a></td>
+<a href="#">п≈п╟я─п╣п╥п╣я─п╡п╦я─п╬п╡п╟п╫п╫п╬п╣ п╪п╣я│я┌п╬</a></td>
 </tr>
 </table>
 </div>
