Сделал по-новому

--- a/header.html
+++ b/header.html
@@ -5,40 +5,7 @@
 <div id="thumbScroller">
 	<div class="container">
     	<div class="content">
-        	<div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/saltuk/hobby.php"><img src="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/logos/saltuk.PNG" title="Салтук Константин" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
-        </div>
-        <div class="content">
-        	<div><a href="#"><img src="" title="Центр" class="thumb" /></a></div>
+        	<div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/saltuk.php"><img src="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/logos/saltuk.PNG" title="Салтук Константин" class="thumb" /></a></div>
         </div>
         <div class="content">
         	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
@@ -73,10 +40,39 @@
         <div class="content">
         	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
         </div>
-        
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
+        <div class="content">
+        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        </div>
 	</div>
 </div>
-<a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/"><div class="text"><p>Салтук Константин</p></div></a>
+<div class="textsh" onClick="document.location='/~saltuk/Hobbies/'"><p>Салтук Константин</p></a>
 </div>
 <script>
 	$outer_container=$("#outer_container");
@@ -125,12 +121,12 @@
 			var $this=$(this);
 			$this.stop().fadeTo(fadeSpeed, 1);
 			var theText=$this.attr('title');
-			$('.text p').html(theText);
+			$('.textsh p').html(theText);
 		},
 		function(){
 			var $this=$(this);
 			$this.stop().fadeTo(fadeSpeed, 0.7);
-			$('.text p').html('Обратно к списку хобби');
+			$('.textsh p').html('Обратно к списку хобби');
 		}
 	);
 </script>
