--- a/header.html
+++ b/header.html
@@ -72,7 +72,7 @@
         </div>
 	</div>
 </div>
-<div class="textsh" onClick="document.location='/~saltuk/Hobbies/'"><p>Салтук Константин</p></a>
+<div class="textsh" onClick="document.location='/~saltuk/Hobbies/'"><p>Обратно к списку хобби</p></a>
 </div>
 <script>
 	$outer_container=$("#outer_container");
