Вынес тех, у кого легко сделать
Остальным придётся самим

--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@ td{
 }
 </style>
 <head><title>Хобби групп 14201, 14202</title></head>
-<body background="fon.jpg">
+<body background="images/fon.jpg">
 <div style="border:solid 1px #ccc; border-radius:10px; width:70%; min-width:1180px; background:rgba(255,255,255,0.7); margin: 0 auto; margin-top:50px; padding: 20 0 0 0">
 <table width=100%>
 <tr>
 <td align="center"><a href="saltuk/hobby.php"><img class=logo src="logos/saltuk.PNG"></a><br><br>
-<a href="saltuk/hobby.php">Салтук Константин</a></td>
+<a href="saltuk.php">Салтук Константин</a></td>
 <td align="center"><a href="mahina/hobby.php"><img class=logo src="logos/mahina.jpg"></a><br><br>
 <a href="mahina/hobby.php">Махина Екатерина</a></td>
 <td align="center"><a href="klokov/hobby.php"><img class=logo src="logos/klokov.jpg"></a><br><br>
 <a href="klokov/hobby.php">Клоков Денис</a></td>
 </tr>
 <tr>
-<td align="center"><a href="boldakov/Hobby.php"><img class=logo src="logos/boldakov.png"></a><br><br>
+<td align="center"><a href="boldakov.php"><img class=logo src="logos/boldakov.png"></a><br><br>
 <a href="#">Болдаков Валерий</a></td>
-<td align="center"><a href="shashok/hobby.php"><img class=logo src="logos/shashok.png"></a><br><br>
+<td align="center"><a href="shashok.php"><img class=logo src="logos/shashok.png"></a><br><br>
 <a href="shashok/hobby.php">Шашок Наталья</a></td>
-<td align="center"><a href="yan/hobby.php"><img class=logo src="logos/yan.jpg"></a><br><br>
+<td align="center"><a href="yan.php"><img class=logo src="logos/yan.jpg"></a><br><br>
 <a href="yan/hobby.php">Ян Игорь</a></td>
 </tr>
 <tr>
 <td align="center"><a href="loginovsky/hobby.php"><img class=logo src="logos/loginovsky"></a><br><br>
 <a href="#">Логиновский Степан</a></td>
-<td align="center"><a href="samarin/hobby.php"><img class=logo src=https://pp.vk.me/c320725/v320725982/a952/EAxoZy8okbo.jpg></a><br><br>
+<td align="center"><a href="samarin.php"><img class=logo src=https://pp.vk.me/c320725/v320725982/a952/EAxoZy8okbo.jpg></a><br><br>
 <a href="#">Самарин Ромочка</a></td>
 <td align="center"><a href="mkirichenko/index.html"><img class=logo></a><br><br>
 <a href="mkirichenko/index.html">Кириченко Михаил</a></td>
