add dserov's section

--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
         	<div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/saltuk.php"><img src="logos/saltuk.PNG" title="Салтук Константин" class="thumb" /></a></div>
         </div>
         <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        	<div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/dserov.php"><img src="logos/dserov.jpg" title="Серов Дмитрий" class="thumb" /></a></div>
         </div>
         <div class="content">
         	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
