--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ td{
 <a href="#">Липаткин Артём</a></td>
 <td align="center"><a href="kmarchenko/hobby.php"><img class=logo src="logos/kmarchenko.jpg"></a><br><br>
 <a href="kmarchenko/hobby.php">Марченко Кристина</a></td>
+<td align="center"><a href="dserov.php"><img class=logo src="logos/dserov.jpg"></a><br><br>
+<a href="dserov.php">Серов Дмитрий</a></td>
 </tr>
 <tr>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
