--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ td{
 <a href="#">Логиновский Степан</a></td>
 <td align="center"><a href="samarin.php"><img class=logo src=https://pp.vk.me/c320725/v320725982/a952/EAxoZy8okbo.jpg></a><br><br>
 <a href="#">Самарин Ромочка</a></td>
-<td align="center"><a href="mkirichenko/index.html"><img class=logo></a><br><br>
+<td align="center"><a href="mkirichenko/index.html"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
 <a href="mkirichenko/index.html">Кириченко Михаил</a></td>
 </tr>
 <tr>
@@ -54,7 +54,6 @@ td{
 </tr>
 <tr>
 <td align="center"><a href="dserov.php"><img class=logo src="logos/dserov.jpg"></a><br><br>
-<a href="dserov.php">Серов Дмитрий</a></td>
 <a href="dserov.php">Серов Дмитрий</a></td>
 <td align="center"><a href="#"><img class=logo src=http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg></a><br><br>
 <a href="#">Зарезервированное место</a></td>
