Lipatkin added changes to do him website common with everybody.

--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
         	<div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/dserov.php"><img src="logos/dserov.jpg" title="Серов Дмитрий" class="thumb" /></a></div>
         </div>
         <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        	<div><a href="#"><img src="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/lipatkin.php" title="Липаткин Артём" class="thumb" /></a></div>
         </div>
         <div class="content">
         	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
