--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
             <div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/binder.php"><img src="logos/binder.jpg" title="Биндер Сергей" class="thumb" /></a></div>
         </div>
         <div class="content">
-        	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
+        	<div><a href="http://mephisto.ccfit.nsu.ru/~saltuk/Hobbies/semushenko.php"><img src="logos/semushenko.jpg" title="Семушенко Алёна" class="thumb" /></a></div>
         </div>
         <div class="content">
         	<div><a href="#"><img src="http://cs322918.vk.me/v322918613/5604/TNaIe6-UaXw.jpg" title="Иванов Иван" class="thumb" /></a></div>
