--- a/chernova/animals.html
+++ b/chernova/animals.html
@@ -10,15 +10,15 @@
 			<tr>
 				<td>
 		<u><b><font size="+2"><font color="990066">Коала</font></font></b></u><br>
-		<img src="scheme_coala.JPG" width="800"><img src="coala.JPG" width="400"><br><br>
+		<img src="/~chernova/public_html/hobby/scheme_coala.JPG" width="800"><img src="/~chernova/public_html/hobby/coala.JPG" width="400"><br><br>
 		<u><b><font size="+2"><font color="990066">Обезьянка</font></font></b></u><br>
-		<img src="scheme_monkey.JPG" width="800"><img src="monkey.JPG" width="400"><br><br>
+		<img src="/~chernova/public_html/hobby/scheme_monkey.JPG" width="800"><img src="/~chernova/public_html/hobby/monkey.JPG" width="400"><br><br>
 		<u><b><font size="+2"><font color="990066">Петушок</font></font></b></u><br>
-		<img src="scheme_chick.JPG" width="800"><img src="chick.JPG" width="400"><br><br>
+		<img src="/~chernova/public_html/hobby/scheme_chick.JPG" width="800"><img src="/~chernova/public_html/hobby/chick.JPG" width="400"><br><br>
 		<u><b><font size="+2"><font color="990066">Слоник</font></font></b></u><br>
-		<img src="scheme_elephant.JPG" width="800"><img src="elephant.JPG" width="400"><br><br>
+		<img src="/~chernova/public_html/hobby/scheme_elephant.JPG" width="800"><img src="/~chernova/public_html/hobby/elephant.JPG" width="400"><br><br>
 		<u><b><font size="+2"><font color="990066">Жираф</font></font></b></u><br>
-		<img src="scheme_giraffe.JPG" width="800"><img src="giraffe.JPG" width="400"><br><br>
+		<img src="/~chernova/public_html/hobby/scheme_giraffe.JPG" width="800"><img src="/~chernova/public_html/hobby/giraffe.JPG" width="400"><br><br>
 		<p align="right"><b><font size="+2"><a href="hobby.html">Назад</a></font></b></p>
 				</td>
 			<tr>
