--- a/chernova/animals.html
+++ b/chernova/animals.html
@@ -3,7 +3,7 @@
                 <title>Животные из бисера</title>
 	</head>
 	<body>
-		<body background="stripes.jpg">
+		<body background="../images/fon.jpg">
 		<b><font size="+3"><font color="990066"><center>В этом разделе вы можете найти схемы плетения различных животных.</center></font></font></b>
 		<br>
 		<p align="center"><table width=1250>
