--- a/chernova/fenechki.html
+++ b/chernova/fenechki.html
@@ -3,7 +3,7 @@
 		<title>Фенечки прямым плетением</title>
 	</head>
 	<body>
-		<body background="stripes.jpg">
+		<body background="../images/fon.jpg">
 		<p align="center"><table width="1250">
 			<tr>
 				<td>
