--- a/chernova/animals.html
+++ b/chernova/animals.html
@@ -3,6 +3,10 @@
                 <title>Животные из бисера</title>
 	</head>
 	<body>
+		
+		<?php 
+			include '../header.html';
+		?>
 		<body background="../images/fon.jpg">
 		<b><font size="+3"><font color="990066"><center>В этом разделе вы можете найти схемы плетения различных животных.</center></font></font></b>
 		<br>
