--- a/chernova/fenechki.html
+++ b/chernova/fenechki.html
@@ -3,6 +3,9 @@
 		<title>Фенечки прямым плетением</title>
 	</head>
 	<body>
+		<?php 
+			include '../header.html';
+		?>
 		<body background="../images/fon.jpg">
 		<p align="center"><table width="1250">
 			<tr>
