--- a/chernova/animals.html
+++ b/chernova/animals.html
@@ -23,7 +23,7 @@
 		<img src="/~chernova/public_html/hobby/scheme_elephant.JPG" width="800"><img src="/~chernova/public_html/hobby/elephant.JPG" width="400"><br><br>
 		<u><b><font size="+2"><font color="990066">Жираф</font></font></b></u><br>
 		<img src="/~chernova/public_html/hobby/scheme_giraffe.JPG" width="800"><img src="/~chernova/public_html/hobby/giraffe.JPG" width="400"><br><br>
-		<p align="right"><b><font size="+2"><a href="hobby.html">Назад</a></font></b></p>
+		<p align="right"><b><font size="+2"><a href="../chernova.php">Назад</a></font></b></p>
 				</td>
 			<tr>
 		</table></p>
