--- a/chernova/fenechki.html
+++ b/chernova/fenechki.html
@@ -34,7 +34,7 @@
 					<img src="/~chernova/public_html/hobby/x_585c6d3f.jpg">
 					<img src="/~chernova/public_html/hobby/d3OoOWyFpUs.jpg">
 					<img src="/~chernova/public_html/hobby/x_69a828f1.jpg"><br>
-					<p align="/~chernova/public_html/hobby/right"><b><font size="+2"><a href="hobby.html">Назад</a></font></b></p>	
+					<p align="/~chernova/public_html/hobby/right"><b><font size="+2"><a href="../chernova.php">Назад</a></font></b></p>	
 		</td></tr></table></p>
 	</body>
 </html>
